package domain.notificaciones;

public interface Suscriptor {
    String getEmail();

    String getWhatsApp();
}
